<resources>
    <string name="app_name">OkiDoc</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new Account?</string>
    <string name="full_name">Full Name</string>
    <string name="addrss">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="me">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="appointment">Appointment</string>
    <string name="about_doc">\u3000\u3000 He received a scholarship grant from Japan International Cooperation Agency. And he has been in the field for thirty (30) years.</string>
</resources>