<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/okidoclogo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:letterSpacing=".1"
                    android:text="Register to"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/lora"
                    android:letterSpacing=".2"
                    android:text="@string/app_name"
                    android:textColor="@color/color3"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/full_name"
                    app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
                    android:layout_width="match_parent"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:endIconMode="clear_text"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullNameET"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/addrss"
                    app:startIconDrawable="@drawable/ic_outline_location_on_24"
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressET"
                        android:inputType="textPostalAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/phone_number"
                    app:startIconDrawable="@drawable/ic_outline_phone_24"
                    android:layout_width="match_parent"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneET"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/gender"
                    app:startIconDrawable="@drawable/baseline_male_24"
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/genderET"
                        android:inputType="textAutoComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/date_of_birth"
                    app:startIconDrawable="@drawable/outline_calendar_month_24"
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthET"
                        android:inputType="date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_outline_mail_24"
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/ic_outline_lock_24"
                    android:layout_width="match_parent"
                    app:endIconMode="password_toggle"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/confirm_password"
                    app:startIconDrawable="@drawable/ic_outline_lock_24"
                    android:layout_width="match_parent"
                    app:endIconMode="password_toggle"
                    app:helperText="Required*"
                    app:helperTextTextColor="@color/red"
                    app:boxStrokeColor="@color/color3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/conPasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/comfortaa"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/signUpBtn"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    app:strokeColor="#87CEFA"
                    app:cornerRadius="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/sign_up"
                    android:textColor="#87CEFA"
                    android:textSize="10pt"
                    android:fontFamily="@font/lora"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_marginBottom="10dp"
                    android:id="@+id/loginBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/lora"
                    android:text="@string/already_have_an_account"
                    android:textColor="#858687"
                    android:textSize="6pt"
                    app:cornerRadius="5dp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>